--- a/src/classes/DemoClass.cls
+++ b/src/classes/DemoClass.cls
@@ -1,6 +1,6 @@
 public with sharing class DemoClass {
     public Account insertAccount(String Str){
-    	Account acc = new Account(Name=Str);\
+    	Account acc = new Account(Name=Str);
     	try{
     		insert acc;
     	}catch(DMLException e){}
